--- a/src/app/user-page/user-page-comments/user-page-comments.component.html
+++ b/src/app/user-page/user-page-comments/user-page-comments.component.html
@@ -3,13 +3,15 @@
     <div class="section-title">Отзывы <span>({{ userData.comments_count }})</span></div>
 
     <div class="tabs">
-      <div class="tab" (click)="currentTab = 0" [ngClass]="{active: currentTab === 0}">Положительные ({{ userData.positive_comments_count }})</div>
-      <div class="tab" (click)="currentTab = 1" [ngClass]="{active: currentTab === 1}">Отрицательные ({{ userData.negative_comments_count }})</div>
+      <div class="tab" (click)="currentTab = 0" [ngClass]="{active: currentTab === 0}">Положительные
+        ({{ userData.positive_comments_count }})</div>
+      <div class="tab" (click)="currentTab = 1" [ngClass]="{active: currentTab === 1}">Отрицательные
+        ({{ userData.negative_comments_count }})</div>
     </div>
   </div>
-  <ng-container >
+  <ng-container>
     <div class="tabContent" *ngIf="currentTab === 0">
-      <div class="comment" *ngFor="let comment of userData.positiveComments">
+      <div class="comment" *ngFor="let comment of userData.positiveComments; let parrentCommentIndex = index">
         <h5 class="comment__service-name" (click)="openOffer(comment.offers.id)">
           {{comment.offers.title}}
         </h5>
@@ -26,8 +28,10 @@
             </a>
             <div class="comment__text-wrapper">
               <div class="comment__top">
-                <a class="comment__name" [routerLink]="['/user', comment.author.id] | localize">{{comment.author.name}} {{comment.author.surname}}</a>
-                <div class="comment__date">{{comment.author.updated_at}}</div>
+                <a class="comment__name" [routerLink]="['/user', comment.author.id] | localize">{{comment.author.name}}
+                  {{comment.author.surname}}</a>
+                <!-- <div class="comment__date">{{comment.author.updated_at}}</div> -->
+                <div class="comment__date">{{comment.created_at}}</div>
               </div>
               <div class="comment__message">{{comment.commentText}}</div>
               <div class="comment__raiting">
@@ -46,27 +50,35 @@
               </div>
             </div>
           </div>
-          <div class="comment__wrapp_child" *ngFor="let comment_child of comment.childs">
-            <div class="comment__avatar" [routerLink]="['/user', comment_child.author.id] | localize">
-              <img [src]="comment_child.author.avatar" alt="">
-            </div>
-            <div class="comment__text-wrapper">
-              <div class="comment__top">
-                <div class="comment__name" [routerLink]="['/user', comment_child.author.id] | localize">{{comment_child.author.name}} {{comment_child.author.surname}}</div>
-                <div class="comment__date">{{comment_child.author.updated_at}}</div>
+          <div class="comment_child__wrapper" *ngIf="comment.childs">
+            <ng-container *ngFor="let comment_child of comment.childs; let i = index">
+              <div class="comment__wrapp_child" *ngIf="i === 0 || showAllchildComments === parrentCommentIndex">
+                <div class="comment__avatar" [routerLink]="['/user', comment_child.author.id] | localize">
+                  <img [src]="comment_child.author.avatar" alt="">
+                </div>
+                <div class="comment__text-wrapper">
+                  <div class="comment__top">
+                    <div class="comment__name" [routerLink]="['/user', comment_child.author.id] | localize">
+                      {{comment_child.author.name}} {{comment_child.author.surname}}</div>
+                      <div class="comment__date">{{comment.created_at}}</div>
+                  </div>
+                  <div class="comment__message">{{comment_child.commentText}}</div>
+                </div>
               </div>
-              <div class="comment__message">{{comment_child.commentText}}</div>
-            </div>
+            </ng-container>
+            <div class="btn-show_more_comments" *ngIf="comment.childs.length > 1"
+              (click)="showMoreChileComments(parrentCommentIndex)"
+              [ngClass]="{open: showAllchildComments === parrentCommentIndex}">читать ответы</div>
           </div>
         </div>
       </div>
     </div>
   </ng-container>
-  <ng-container >
+  <ng-container>
     <div class="tabContent" *ngIf="currentTab === 1">
-      <div class="comment" *ngFor="let comment of userData.negativeComments">
-        <h5 class="comment__service-name">
-          {{comment.offers.title}}
+      <div class="comment" *ngFor="let comment of userData.negativeComments; let parrentCommentIndex = index">
+        <h5 class=" comment__service-name" (click)="openOffer(comment.offers.id)">
+        {{comment.offers.title}}
         </h5>
         <div class="comment__wrapp">
           <div class="comment__wrapp_parrent">
@@ -81,8 +93,9 @@
             </a>
             <div class="comment__text-wrapper">
               <div class="comment__top">
-                <a class="comment__name" [routerLink]="['/user', comment.author.id] | localize">{{comment.author.name}} {{comment.author.surname}}</a>
-                <div class="comment__date">{{comment.author.updated_at}}</div>
+                <a class="comment__name" [routerLink]="['/user', comment.author.id] | localize">{{comment.author.name}}
+                  {{comment.author.surname}}</a>
+                  <div class="comment__date">{{comment.created_at}}</div>
               </div>
               <div class="comment__message">{{comment.commentText}}</div>
               <div class="comment__raiting">
@@ -101,17 +114,26 @@
               </div>
             </div>
           </div>
-          <div class="comment__wrapp_child" *ngFor="let comment_child of comment.childs">
-            <div class="comment__avatar" [routerLink]="['/user', comment_child.author.id] | localize">
-              <img [src]="comment_child.author.avatar" alt="">
-            </div>
-            <div class="comment__text-wrapper">
-              <div class="comment__top">
-                <div class="comment__name" [routerLink]="['/user', comment_child.author.id] | localize">{{comment_child.author.name}} {{comment_child.author.surname}}</div>
-                <div class="comment__date">{{comment_child.author.updated_at}}</div>
+          <div class="comment_child__wrapper" *ngIf="comment.childs">
+            <ng-container *ngFor="let comment_child of comment.childs; let i = index">
+              <div class="comment__wrapp_child" *ngIf="i === 0 || showAllchildComments === parrentCommentIndex">
+                <div class="comment__avatar" [routerLink]="['/user', comment_child.author.id] | localize">
+                  <img [src]="comment_child.author.avatar" alt="">
+                </div>
+                <div class="comment__text-wrapper">
+                  <div class="comment__top">
+                    <div class="comment__name" [routerLink]="['/user', comment_child.author.id] | localize">
+                      {{comment_child.author.name}} {{comment_child.author.surname}}</div>
+                      <div class="comment__date">{{comment.created_at}}</div>
+                  </div>
+                  <div class="comment__message">{{comment_child.commentText}}</div>
+                </div>
               </div>
-              <div class="comment__message">{{comment_child.commentText}}</div>
-            </div>
+            </ng-container>
+
+            <div class="btn-show_more_comments" *ngIf="comment.childs.length > 1"
+              (click)="showMoreChileComments(parrentCommentIndex)"
+              [ngClass]="{open: showAllchildComments === parrentCommentIndex}">читать ответы</div>
           </div>
         </div>
       </div>
