--- a/src/app/service-page/components/service-page-another-services/service-page-another-services.component.html
+++ b/src/app/service-page/components/service-page-another-services/service-page-another-services.component.html
@@ -11,8 +11,8 @@
 
         <p class="card-description__about" (click)="openOffer(offer.id)">{{offer.title}}</p>
         <div class="card-description__bottom">
-          <div class="card-description__level">{{offerData.raiting}}</div>
-          <div class="card-description__comments"><a>({{offerData.comments_count}} отзывов)</a></div>
+          <div class="card-description__level">{{offer.raiting}}</div>
+          <div class="card-description__comments"><a>({{offer.comments_count}} отзывов)</a></div>
         </div>
 
       </div>
