--- a/src/app/service-page/components/service-page-comments/service-page-comments.component.html
+++ b/src/app/service-page/components/service-page-comments/service-page-comments.component.html
@@ -11,7 +11,7 @@
 
 
     <div class="commets-array" id="positive">
-      <div class="comment-wrapper" *ngFor="let comment of offerData.positiveComments">
+      <div class="comment-wrapper" *ngFor="let comment of offerData.positiveComments; let parrentCommentIndex = index">
 
         <div class="comment main">
           <div class="left-side">
@@ -22,39 +22,44 @@
           <div class="right-side">
             <a class="user-name" [routerLink]="['/user', comment.author.id] | localize">{{ comment.author.name }}
               {{ comment.author.surname }}</a>
-            <div class="user-raiting-wrapp">
-              <span class="star-raiting">{{ comment.mark }}</span>
-            </div>
+              <div class="user-raiting-wrapp">
+                <span class="star-raiting">{{ comment.mark }}</span>
+              </div>
+            <!-- <div class="publication_time">
+              09.01.2020
+            </div> -->
             <p class="comment-text">
               {{ comment.commentText }}
             </p>
+
           </div>
         </div>
-
-        <ng-container *ngIf="comment.childs">
-          <div class="comment sub" *ngFor="let child of comment.childs">
-            <div class="left-side">
-              <a class="ava" [routerLink]="['/user', child.author.id] | localize">
-                <img [src]="child.author.avatar" alt="user avatar">
-              </a>
+        <div class="comment_child__wrapper" *ngIf="comment.childs">
+          <ng-container *ngFor="let child of comment.childs; let i = index">
+            <div class="comment sub" *ngIf="i === 0 || showAllchildComments === parrentCommentIndex">
+              <div class="left-side">
+                <a class="ava" [routerLink]="['/user', child.author.id] | localize">
+                  <img [src]="child.author.avatar" alt="user avatar">
+                </a>
+              </div>
+              <div class="right-side">
+                <a class="user-name" [routerLink]="['/user', child.author.id] | localize">{{ child.author.name }}
+                  {{ child.author.surname }}</a>
+                <p class="comment-text">
+                  {{ child.commentText }}
+                </p>
+              </div>
             </div>
-            <div class="right-side">
-              <a class="user-name" [routerLink]="['/user', child.author.id] | localize">{{ child.author.name }}
-                {{ child.author.surname }}</a>
-              <p class="comment-text">
-                {{ child.commentText }}
-              </p>
-            </div>
-          </div>
-        </ng-container>
-
-
+          </ng-container>
+          <div class="btn-show_more_comments" *ngIf="comment.childs.length > 1"
+            (click)="showMoreChileComments(parrentCommentIndex)"
+            [ngClass]="{open: showAllchildComments === parrentCommentIndex}">читать ответы</div>
+        </div>
       </div>
-
     </div>
 
     <div class="commets-array" id="negative">
-      <div class="comment-wrapper" *ngFor="let comment of offerData.negativeComments">
+      <div class="comment-wrapper" *ngFor="let comment of offerData.negativeComments; let parrentCommentIndex = index">
 
         <div class="comment main">
           <div class="left-side">
@@ -74,25 +79,29 @@
           </div>
         </div>
 
-        <ng-container *ngIf="comment.childs">
-          <div class="comment sub" *ngFor="let child of comment.childs">
-            <div class="left-side">
-              <a class="ava" [routerLink]="['/user', child.author.id] | localize">
-                <img [src]="child.author.avatar" alt="user avatar">
-              </a>
-            </div>
-            <div class="right-side">
-              <a class="user-name" [routerLink]="['/user', child.author.id] | localize">{{ child.author.name }}
-                {{ child.author.surname }}</a>
-              <p class="comment-text">
-                {{ child.commentText }}
-              </p>
+        <div class="comment_child__wrapper" *ngIf="comment.childs">
+          <ng-container *ngFor="let child of comment.childs; let i = index">
+            <div class="comment sub" *ngIf="i === 0 || showAllchildComments === parrentCommentIndex">
+              <div class="left-side">
+                <a class="ava" [routerLink]="['/user', child.author.id] | localize">
+                  <img [src]="child.author.avatar" alt="user avatar">
+                </a>
+              </div>
+              <div class="right-side">
+                <a class="user-name" [routerLink]="['/user', child.author.id] | localize">{{ child.author.name }}
+                  {{ child.author.surname }}</a>
+                <p class="comment-text">
+                  {{ child.commentText }}
+                </p>
             </div>
           </div>
         </ng-container>
-
+        <div class="btn-show_more_comments" *ngIf="comment.childs.length > 1"
+          (click)="showMoreChileComments(parrentCommentIndex)"
+          [ngClass]="{open: showAllchildComments === parrentCommentIndex}">читать ответы</div>
       </div>
     </div>
+  </div>
   </div>
 
 </section>
