--- a/src/app/user-page/user-page-comments/user-page-comments.component.scss
+++ b/src/app/user-page/user-page-comments/user-page-comments.component.scss
@@ -91,10 +91,18 @@
       display: flex;
       padding-left: 190px;
       margin-bottom: 25px;
-      
     }
   }
-
+  // &_child__wrapper{
+  //   height: 100%;
+  //   max-height: 200px;
+  //   transition: max-height .3s;
+  //   &.open{
+  //     height: 100%;
+  //     max-height: 800px;
+  //     transition: max-height .3s;
+  //   }
+  // }
   &__img{
     position: relative;
     margin-right: 54px;
@@ -155,7 +163,7 @@
     line-height: 23px;
     color: #4E5051;
     cursor: pointer;
-    margin-right: 60px;
+    margin-right: 20px;
     text-decoration: none;
     outline: none;
     &:hover{
@@ -185,6 +193,35 @@
       margin-right: 25px;
       span{
         padding-right: 7px;
+      }
+    }
+  }
+  .btn-show_more_comments{
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.01em;
+    text-transform: uppercase;
+    color: #3C7EEA;
+    cursor: pointer;
+    position: relative;
+    width: max-content;
+    padding-right: 20px;
+    margin: 0 auto;
+    &::after{
+      content: '';
+      background-image: url(/assets/images/svg/user/blue-arrow-down.svg);
+      position: absolute;
+      top: 50%;
+      right: 0;
+      transform: translateY(-50%);
+      width: 12px;
+      height: 7px;
+    }
+    &.open{
+      &::after{
+        transform: translateY(-50%) rotate(-180deg);
       }
     }
   }
