--- a/src/app/service-page/components/service-page-comments/service-page-comments.component.scss
+++ b/src/app/service-page/components/service-page-comments/service-page-comments.component.scss
@@ -110,6 +110,20 @@
       padding-left: 80px;
       padding-right: 60px;
     }
+    &__raiting{
+      display: flex;
+
+      font-size: 16px;
+      line-height: 20px;
+      color: #707683;
+      &-item{
+        display: flex;
+        margin-right: 25px;
+        span{
+          padding-right: 7px;
+        }
+      }
+    }
   }
   .btn-show_more_comments{
     font-weight: 600;
