--- a/src/app/service-page/components/service-page/service-page.component.html
+++ b/src/app/service-page/components/service-page/service-page.component.html
@@ -91,26 +91,26 @@
         <div class="raiting-type">
           <div class="raiting-type_name">Качество услуги</div>
           <div class="raiting-type_numeral">
-            <span class="raiting-type_number">{{ offerData.user.qualityMark }}</span>
+            <span class="raiting-type_number">{{ offerData.averageRaiting.qualityMark }}</span>
           </div>
         </div>
         <div class="raiting-type">
           <div class="raiting-type_name">Срок исполнения</div>
           <div class="raiting-type_numeral">
-            <span class="raiting-type_number">{{ offerData.user.termMark }}</span>
+            <span class="raiting-type_number">{{ offerData.averageRaiting.termMark }}</span>
           </div>
         </div>
         <div class="raiting-type">
           <div class="raiting-type_name">Вежливость фрилансера</div>
           <div class="raiting-type_numeral">
-            <span class="raiting-type_number">{{ offerData.user.politenessMark }}</span>
+            <span class="raiting-type_number">{{ offerData.averageRaiting.politenessMark }}</span>
           </div>
         </div>
 
         <div class="raiting-type average">
           <div class="raiting-type_name">Средняя оценка</div>
           <div class="raiting-type_numeral">
-            <span class="raiting-type_number">{{ offerData.averageMark }}</span>
+            <span class="raiting-type_number">{{ offerData.averageRaiting.averageMark }}</span>
           </div>
           <span class="comments-count">( {{ offerData.comments_count}} отзывов):</span>
         </div>
