--- a/src/app/user-page/user-page-comments/user-page-comments.component.html
+++ b/src/app/user-page/user-page-comments/user-page-comments.component.html
@@ -31,21 +31,21 @@
                 <a class="comment__name" [routerLink]="['/user', comment.author.id] | localize">{{comment.author.name}}
                   {{comment.author.surname}}</a>
                 <!-- <div class="comment__date">{{comment.author.updated_at}}</div> -->
-                <div class="comment__date">{{comment.created_at}}</div>
+                <div class="comment__date">{{converDateToDMY(comment.created_at)}}</div>
               </div>
               <div class="comment__message">{{comment.commentText}}</div>
               <div class="comment__raiting">
                 <div class="comment__raiting-item">
                   <span>Качество</span>
-                  <div class="star-raiting">{{comment.qualityMark}}</div>
+                  <div class="star-raiting">{{comment.offers.averageRaiting.qualityMark}}</div>
                 </div>
                 <div class="comment__raiting-item">
                   <span>Срок</span>
-                  <div class="star-raiting">{{comment.termMark}}</div>
+                  <div class="star-raiting">{{comment.offers.averageRaiting.termMark}}</div>
                 </div>
                 <div class="comment__raiting-item">
                   <span>Вежливость</span>
-                  <div class="star-raiting">{{comment.politenessMark}}</div>
+                  <div class="star-raiting">{{comment.offers.averageRaiting.politenessMark}}</div>
                 </div>
               </div>
             </div>
@@ -60,7 +60,7 @@
                   <div class="comment__top">
                     <div class="comment__name" [routerLink]="['/user', comment_child.author.id] | localize">
                       {{comment_child.author.name}} {{comment_child.author.surname}}</div>
-                      <div class="comment__date">{{comment.created_at}}</div>
+                      <div class="comment__date">{{converDateToDMY(comment.created_at)}}</div>
                   </div>
                   <div class="comment__message">{{comment_child.commentText}}</div>
                 </div>
@@ -95,21 +95,21 @@
               <div class="comment__top">
                 <a class="comment__name" [routerLink]="['/user', comment.author.id] | localize">{{comment.author.name}}
                   {{comment.author.surname}}</a>
-                  <div class="comment__date">{{comment.created_at}}</div>
+                  <div class="comment__date">{{converDateToDMY(comment.created_at)}}</div>
               </div>
               <div class="comment__message">{{comment.commentText}}</div>
               <div class="comment__raiting">
                 <div class="comment__raiting-item">
                   <span>Качество</span>
-                  <div class="star-raiting">{{comment.qualityMark}}</div>
+                  <div class="star-raiting">{{comment.offers.averageRaiting.qualityMark}}</div>
                 </div>
                 <div class="comment__raiting-item">
                   <span>Срок</span>
-                  <div class="star-raiting">{{comment.termMark}}</div>
+                  <div class="star-raiting">{{comment.offers.averageRaiting.termMark}}</div>
                 </div>
                 <div class="comment__raiting-item">
                   <span>Вежливость</span>
-                  <div class="star-raiting">{{comment.politenessMark}}</div>
+                  <div class="star-raiting">{{comment.offers.averageRaiting.politenessMark}}</div>
                 </div>
               </div>
             </div>
@@ -124,7 +124,7 @@
                   <div class="comment__top">
                     <div class="comment__name" [routerLink]="['/user', comment_child.author.id] | localize">
                       {{comment_child.author.name}} {{comment_child.author.surname}}</div>
-                      <div class="comment__date">{{comment.created_at}}</div>
+                      <div class="comment__date">{{converDateToDMY(comment.created_at)}}</div>
                   </div>
                   <div class="comment__message">{{comment_child.commentText}}</div>
                 </div>
